k8slearn/9.Kubernetes 监控/9.5.VictoriaMetrics/Manifest/1.VictoriaMetrics-standalone/vm-promxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promxy
  namespace: kube-vm
spec:
  selector:
    matchLabels:
      app: promxy
  template:
    metadata:
      labels:
        app: promxy
    spec:
      containers:
        - args:
            - '--config=/etc/promxy/config.yaml'
            - '--web.enable-lifecycle'
            - '--log-level=trace'
          command:
            - '/bin/promxy'
          image: quay.io/jacksontj/promxy
          imagePullPolicy: Always
          name: promxy
          ports:
            - containerPort: 8082
              name: web
          volumeMounts:
            - mountPath: '/etc/promxy/'
              name: promxy-config
              readOnly: true
        - args: # container to reload configs on configmap change
            - '--volume-dir=/etc/promxy'
            - '--webhook-url=http://localhost:8082/-/reload'
          image: jimmidyson/configmap-reload:v0.1
          name: promxy-server-configmap-reload
          volumeMounts:
            - mountPath: '/etc/promxy/'
              name: promxy-config
              readOnly: true
      volumes:
        - configMap:
            name: promxy-config
          name: promxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: promxy
  namespace: kube-vm
spec:
  type: NodePort
  ports:
    - port: 8082
      nodePort: 30618
  selector:
    app: promxy
