k8slearn/9.Kubernetes 监控/9.5.VictoriaMetrics/Manifest/1.VictoriaMetrics-standalone/prometheus-vm-ingress.yaml
# prometheus-vm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-vm
  namespace: kube-vm
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus-vm.qikqiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
